--- a/styles/preloadHide.css
+++ b/styles/preloadHide.css
@@ -1,5 +1,5 @@
-body {
-    opacity: 0;
+body, frameset {
+    opacity: 0 ;
     transform: translateY(-20px);
     transition:
       opacity 0.8s ease,
