Revert "Clean globalStyle.css"
This reverts commit 47a8d93247fe0358718c48ffd317ac6b79a2e2db.

--- a/styles/globalStyle.css
+++ b/styles/globalStyle.css
@@ -190,6 +190,9 @@ HR {
     BORDER: 1px solid #9370db;
 }
 
+/* Date Picker Styles */
+.dpDiv {}
+
 .dpTable {
     FONT-FAMILY: Arial, Helvetica, sans-serif;
     FONT-SIZE: 12px;
@@ -198,6 +201,8 @@ HR {
     BACKGROUND-COLOR: #ffffff;
     BORDER: 1px solid #e5d4f7;
 }
+
+.dpTR, .dpTitleTR, .dpDayTR, .dpTodayButtonTR {}
 
 .dpTD {
     BORDER: 1px solid #e5d4f7;
@@ -209,6 +214,8 @@ HR {
     COLOR: white;
     cursor: pointer;
 }
+
+.dpTitleTD, .dpButtonTD, .dpTodayButtonTD {}
 
 .dpTitleText {
     FONT-SIZE: 12px;
