--- a/styles/globalStyle.css
+++ b/styles/globalStyle.css
@@ -190,9 +190,6 @@ HR {
     BORDER: 1px solid #9370db;
 }
 
-/* Date Picker Styles */
-.dpDiv {}
-
 .dpTable {
     FONT-FAMILY: Arial, Helvetica, sans-serif;
     FONT-SIZE: 12px;
@@ -201,8 +198,6 @@ HR {
     BACKGROUND-COLOR: #ffffff;
     BORDER: 1px solid #e5d4f7;
 }
-
-.dpTR, .dpTitleTR, .dpDayTR, .dpTodayButtonTR {}
 
 .dpTD {
     BORDER: 1px solid #e5d4f7;
@@ -214,8 +209,6 @@ HR {
     COLOR: white;
     cursor: pointer;
 }
-
-.dpTitleTD, .dpButtonTD, .dpTodayButtonTD {}
 
 .dpTitleText {
     FONT-SIZE: 12px;
@@ -262,6 +255,7 @@ form[name="filter"] td {
 
 form[name="filter"] select {
     background: #e5d4f7;
+    scrollbar-color: #4b0082#e5d4f7;
     color: #4b0082;
     border: 1px solid #9370db;
     font-family: Arial, Helvetica, sans-serif;
@@ -310,7 +304,7 @@ form[name="m_und_e"],
 form[name="p"],
 form[name="ue"],
 form[name="rue"] {
-    background: #ffffff;
+    background: #f5e6ff;
     padding: 12px; /* slightly more padding */
     border: 1px solid #e0e0e0;
     width: fit-content;
