--- a/styles/globalStyle.css
+++ b/styles/globalStyle.css
@@ -1,6 +1,7 @@
 BODY {
     FONT-SIZE: 10pt;
     BACKGROUND: #e5d4f7 !important;
+    margin: 0;
     COLOR: black;
     FONT-FAMILY: Arial, Helvetica, sans-serif;
     TEXT-DECORATION: none;
@@ -266,15 +267,22 @@ form[name="filter"] select {
     cursor: pointer;
 }
 
+form[name="filter"] select {
+    background: #e5d4f7;
+    scrollbar-color: #4b0082#e5d4f7;
+    color: #4b0082;
+    border: 1px solid #9370db;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 8pt;
+    padding: 4px;
+    width: 100%;
+    min-width: 120px;
+    cursor: pointer;
+}
+
 form[name="filter"] select option:checked{
     background-color: #9a79dd;
     color: white;
-}
-
-form[name="filter"] select option:focus{
-    background-color: #9a79dd;
-    color: white;
-    outline: none;
 }
 
 form[name="filter"] select#abteilung {
