--- a/styles/globalStyle.css
+++ b/styles/globalStyle.css
@@ -1,234 +1,246 @@
-BODY {
-    FONT-SIZE: 10pt;
-    BACKGROUND: #e5d4f7 !important;
+body, .montly-view {
+    font-size: 10pt;
+    background: #e5d4f7 !important;
     margin: 0;
-    COLOR: black;
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
-    TEXT-DECORATION: none;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
 }
-H1 {
-    FONT-SIZE: 18pt;
-    FONT-WEIGHT: normal;
-    COLOR: #4b0082;
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
-    TEXT-DECORATION: none;
+
+h1 {
+    font-size: 18pt;
+    font-weight: normal;
+    color: #4b0082;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
 }
-H2 {
-    FONT-SIZE: 14pt;
-    FONT-WEIGHT: normal;
-    COLOR: #4b0082;
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
-    TEXT-DECORATION: none;
+
+h2 {
+    font-size: 14pt;
+    font-weight: normal;
+    color: #4b0082;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
 }
-H3, H4, H5 {
-    FONT-WEIGHT: bold;
-    FONT-SIZE: 120%;
-    COLOR: #800080;
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
-    TEXT-DECORATION: none;
+
+h3, h4, h5 {
+    font-weight: bold;
+    font-size: 120%;
+    color: #800080;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
 }
-A:link, A:visited {
-    COLOR: #9370db;
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
+
+a:link, a:visited {
+    color: #9370db;
+    font-family: Arial, Helvetica, sans-serif;
 }
-A:hover {
-    COLOR: #ba55d3;
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
+
+a:hover {
+    color: #ba55d3;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
 .noline {
-    TEXT-DECORATION: none;
+    text-decoration: none;
 }
 
-OL {
-    LINE-HEIGHT: 150%;
+ol {
+    line-height: 150%;
 }
 
-.footer, TD {
-    FONT-WEIGHT: normal;
-    FONT-SIZE: 7pt;
-    COLOR: #4b0082;
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
+.footer, td {
+    font-weight: normal;
+    font-size: 7pt;
+    color: #4b0082;
+    font-family: Arial, Helvetica, sans-serif;
     padding: 2px;
 }
-TABLE {
+
+table {
     border-collapse: collapse;
 }
-.table_red { 
-    FONT-WEIGHT: normal;
-    FONT-SIZE: 8pt;
-    BACKGROUND: #8b008b;
-    COLOR: white;
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
+
+.table_red {
+    font-weight: normal;
+    font-size: 8pt;
+    background: #8b008b;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
     padding: 2px;
 }
 
 .backgrd {
-    BACKGROUND: white;
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
+    background: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
 .absenz {
-    FONT-WEIGHT: normal;
-    FONT-SIZE: 7pt;
-    COLOR: #4b0082;
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    font-size: 7pt;
+    color: #4b0082;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
 .title {
-    FONT-SIZE: 10pt;
-    FONT-WEIGHT: bold;
-    COLOR: #4b0082;
-    BACKGROUND: #e5d4f7;
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
+    font-size: 10pt;
+    font-weight: bold;
+    color: #4b0082;
+    background: #e5d4f7;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
 .inhalt_rk, .select_rk {
-    FONT-SIZE: 8pt;
-    FONT-WEIGHT: normal;
-    COLOR: #4b0082;
-    BACKGROUND: #e5d4f7;
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
+    font-size: 8pt;
+    font-weight: normal;
+    color: #4b0082;
+    background: #e5d4f7;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .title_red {
-    FONT-SIZE: 10pt;
-    FONT-WEIGHT: bold;
-    COLOR: #4b0082;
-    BACKGROUND: #f2d6eb;
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
+    font-size: 10pt;
+    font-weight: bold;
+    color: #4b0082;
+    background: #f2d6eb;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .inhalt_t, .inhalt, .inhalt2, .contentcol {
-    FONT-WEIGHT: normal;
-    FONT-SIZE: 8pt;
-    COLOR: #4b0082;
-    BACKGROUND: #f5e6ff;
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    font-size: 8pt;
+    color: #4b0082;
+    background: #f5e6ff;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
 .feiertag_t, .feiertag {
-    BACKGROUND: #f2d6eb;
+    background: #f2d6eb;
 }
 
 .inhalt_t_s, .inhalt_s {
-    BACKGROUND: #c8b4d6;
+    background: #c8b4d6;
 }
 
 .feiertag_t_s, .feiertag_s {
-    BACKGROUND: #d6b4c8;
+    background: #d6b4c8;
 }
 
 .inhalt_p_ok {
-    BACKGROUND: #b4d6c8;
+    background: #b4d6c8;
 }
 
 .inhalt_p_nok {
-    BACKGROUND: #d6b4c8;
+    background: #d6b4c8;
 }
 
 .inhalt_bgred {
-    BACKGROUND: #c080c0;
+    background: #c080c0;
 }
 
 .headline {
-    FONT-WEIGHT: bold;
-    FONT-SIZE: 12pt;
-    COLOR: #4b0082;
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 12pt;
+    color: #4b0082;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .subline {
-    FONT-WEIGHT: bold;
-    FONT-SIZE: 130%;
-    COLOR: #800080;
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 130%;
+    color: #800080;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .searchbar {
-    BACKGROUND: #9370db;
+    background: #9370db;
 }
 
 .navicol {
-    BACKGROUND: #d8b4f2;
+    background: #d8b4f2;
 }
 
 .promocol {
-    BACKGROUND: #e6d5f5;
+    background: #e6d5f5;
 }
 
 .contentcol {
-    BACKGROUND: #ffffff;
+    background: #ffffff;
 }
 
 .nounderline {
-    TEXT-DECORATION: none;
+    text-decoration: none;
 }
 
-HR {
-    COLOR: #9370db;
+hr {
+    color: #9370db;
 }
 
 .formface, a.button {
-    FONT-SIZE: 100%;
-    BACKGROUND: #c8b4d6;
-    COLOR: white;
-    PADDING: 1px 4px;
-    BORDER: 1px solid #9370db;
+    font-size: 100%;
+    background: #c8b4d6;
+    color: white;
+    padding: 1px 4px;
+    border: 1px solid #9370db;
     text-align: center;
     text-decoration: none;
     cursor: pointer;
 }
 
 .selectbutton {
-    FONT-SIZE: 100%;
-    BACKGROUND: #800080;
-    COLOR: white;
-    PADDING: 1px 4px;
-    BORDER: 1px solid #9370db;
+    font-size: 100%;
+    background: #800080;
+    color: white;
+    padding: 1px 4px;
+    border: 1px solid #9370db;
 }
 
 .deselectbutton {
-    FONT-SIZE: 100%;
-    BACKGROUND: #cccccc;
-    COLOR: #800080;
-    PADDING: 1px 4px;
-    BORDER: 1px solid #9370db;
+    font-size: 100%;
+    background: #cccccc;
+    color: #800080;
+    padding: 1px 4px;
+    border: 1px solid #9370db;
 }
 
 .dpTable {
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
-    FONT-SIZE: 12px;
-    TEXT-ALIGN: center;
-    COLOR: #4b0082;
-    BACKGROUND-COLOR: #ffffff;
-    BORDER: 1px solid #e5d4f7;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    text-align: center;
+    color: #4b0082;
+    background-color: #ffffff;
+    border: 1px solid #e5d4f7;
 }
 
 .dpTD {
-    BORDER: 1px solid #e5d4f7;
+    border: 1px solid #e5d4f7;
 }
 
 .dpDayHighlightTD, .dpTDHover, .dpDayTD {
-    BACKGROUND-COLOR: #d8b4f2;
-    BORDER: 1px solid #e5d4f7;
-    COLOR: white;
+    background-color: #d8b4f2;
+    border: 1px solid #e5d4f7;
+    color: white;
     cursor: pointer;
 }
 
 .dpTitleText {
-    FONT-SIZE: 12px;
-    COLOR: #4b0082;
-    FONT-WEIGHT: bold;
+    font-size: 12px;
+    color: #4b0082;
+    font-weight: bold;
 }
 
 .dpDayHighlight {
-    COLOR: white;
-    FONT-WEIGHT: bold;
+    color: white;
+    font-weight: bold;
 }
 
 .dpButton {
-    FONT-FAMILY: Arial, Helvetica, sans-serif;
-    FONT-SIZE: 10px;
-    COLOR: #4b0082;
-    BACKGROUND: #d8b4f2;
-    FONT-WEIGHT: bold;
-    PADDING: 2px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
+    color: #4b0082;
+    background: #d8b4f2;
+    font-weight: bold;
+    padding: 2px;
 }
 
 form[name="filter"] {
@@ -256,7 +268,7 @@ form[name="filter"] td {
 
 form[name="filter"] select {
     background: #e5d4f7;
-    scrollbar-color: #4b0082#e5d4f7;
+    scrollbar-color: #4b0082 #e5d4f7;
     color: #4b0082;
     border: 1px solid #9370db;
     font-family: Arial, Helvetica, sans-serif;
@@ -267,20 +279,7 @@ form[name="filter"] select {
     cursor: pointer;
 }
 
-form[name="filter"] select {
-    background: #e5d4f7;
-    scrollbar-color: #4b0082#e5d4f7;
-    color: #4b0082;
-    border: 1px solid #9370db;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 8pt;
-    padding: 4px;
-    width: 100%;
-    min-width: 120px;
-    cursor: pointer;
-}
-
-form[name="filter"] select option:checked{
+form[name="filter"] select option:checked {
     background-color: #9a79dd;
     color: white;
 }
@@ -324,7 +323,7 @@ form[name="p"],
 form[name="ue"],
 form[name="rue"] {
     background: #f5e6ff;
-    padding: 12px; /* slightly more padding */
+    padding: 12px;
     border: 1px solid #e0e0e0;
     width: fit-content;
     margin: 12px auto;
@@ -349,7 +348,7 @@ form[name="m_und_e"] td,
 form[name="p"] td,
 form[name="ue"] td,
 form[name="rue"] td {
-    padding: 8px; /* a little more breathing room */
+    padding: 8px;
 }
 
 /* Buttons */
@@ -361,15 +360,15 @@ form[name="ue"] input[type="button"],
 form[name="rue"] input[type="button"] {
     background: #b39ddb;
     color: #ffffff;
-    font-size: 11pt; /* slightly bigger font */
+    font-size: 11pt;
     border: none;
-    height: 32px; /* bigger button */
-    width: 260px; /* wider button */
+    height: 32px;
+    width: 260px;
     cursor: pointer;
     border-radius: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: normal;
-    box-shadow: 0px 2px 5px rgba(0,0,0,0.15);
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
     transition: all 0.3s ease;
 }
 
@@ -381,5 +380,5 @@ form[name="p"] input[type="button"]:hover,
 form[name="ue"] input[type="button"]:hover,
 form[name="rue"] input[type="button"]:hover {
     background: #9575cd;
-    box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
