--- a/styles/preloadHide.css
+++ b/styles/preloadHide.css
@@ -1,8 +1,14 @@
-body{
+html, .monthly-view {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+body, .monthly-view{
   position: absolute;
   top: 0; left: 0; right: 0; bottom: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 9999;
   opacity: 0;
   transition:
