--- a/styles/preloadHide.css
+++ b/styles/preloadHide.css
@@ -24,7 +24,7 @@ body, .monthly-view{
   z-index: 10000;
   width: 100vw;
   height: 100vh;
-  background-color: #e5d4f7;
+  background-color: rgb(233, 196, 106);
   display: flex;
   gap: 20px;
   justify-content: center;
